fix pre-wrap

--- a/public/style.css
+++ b/public/style.css
@@ -149,3 +149,10 @@ li {
     margin: 2px 0 4px 20px;
     overflow: visible;
   }
+
+  .post__message {
+    overflow: auto;
+    max-height: 600px;
+    padding: 16px;
+    white-space: pre-wrap;
+  }
